Add login and profile pages

--- a/templates/register.html
+++ b/templates/register.html
@@ -21,5 +21,6 @@
             <input type="text" name="address"> <br>
             <input type="submit" value="Register">
         </form>
+        <p>Already have an account? Login <a href="/login">here</a>
     </body>
 </html>
